sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:8: error: '(' expected but identifier found.
      if plusPetitQue(i,temp) {
         ^AlgSelectionSort:12: error: illegal start of simple expression
    }
    ^